--- a/day1/jquery_exercise/index.html
+++ b/day1/jquery_exercise/index.html
@@ -23,8 +23,10 @@
 
   <div class="hide-show-container">
     <div class="hide-show">
+      <div class="link">
       <a href="#" id="hide"> Hide </a>
       <a href="#" id="show"> Show </a>
+      </div>
       <ul class="list-phrases"></ul>
     </div>
   </div>
