Third iteration complete

--- a/day2/spotify_artist_search/index.html
+++ b/day2/spotify_artist_search/index.html
@@ -28,6 +28,11 @@
       <ul  class="js-album-list list-group"></ul>
     </section>
   </section>
+  <section class="container-track">
+    <section class="row">
+      <ul  class="js-track-list list-group"></ul>
+    </section>
+  </section>
 
   <div id="js-modal" class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
